question 4 complète (sans correction)
