# src/dto/bookCopy.dto.ts
@@ -1,5 +1,8 @@
+import { BookDTO } from "./book.dto";
+
 export interface BookCopyDTO {
     id?: number;
+    book?: BookDTO;
     bookId: number;
     available: boolean;
     state: number;
