# src/dto/bookCopy.patch.dto.ts
@@ -1,0 +1,4 @@
+export interface BookCopyPatchDTO {
+    state?: number;
+    available?: boolean;
+}
