# src/dto/bookCopy.post.dto.ts
@@ -1,0 +1,5 @@
+export interface BookCopyPostDTO {
+    bookId: number;
+    state: number;
+    available?: boolean;
+}
